<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.milesight.beaveriot</groupId>
        <artifactId>user</artifactId>
        <version>${revision}</version>
    </parent>

    <artifactId>user-service</artifactId>
    <name>user-service</name>
    <description>An open-source platform designed for rapid and intuitive IoT application development.</description>
    <url>https://github.com/milesight-iot/beaver-iot</url>
    <scm>
        <url>https://github.com/milesight-iot/beaver-iot</url>
    </scm>
    <organization>
        <name>Milesight</name>
        <url>https://www.milesight.com</url>
    </organization>
    <developers>
        <developer>
            <id>Simon</id>
            <name>Simon Zhao</name>
            <email>simon.zhao@milesight.com</email>
        </developer>
    </developers>
    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://opensource.org/license/MIT</url>
        </license>
    </licenses>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.aspectj</groupId>
            <artifactId>aspectjweaver</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-crypto</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>

        <dependency>
            <groupId>jakarta.servlet</groupId>
            <artifactId>jakarta.servlet-api</artifactId>
            <scope>provided</scope>
        </dependency>

        <!-- mapstruct -->
        <dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct</artifactId>
        </dependency>
        <dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct-processor</artifactId>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok-mapstruct-binding</artifactId>
        </dependency>

        <dependency>
            <groupId>com.milesight.beaveriot</groupId>
            <artifactId>context</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.milesight.beaveriot</groupId>
            <artifactId>data-api</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.milesight.beaveriot</groupId>
            <artifactId>dashboard-api</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.milesight.beaveriot</groupId>
            <artifactId>device-api</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.milesight.beaveriot</groupId>
            <artifactId>entity-api</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.milesight.beaveriot</groupId>
            <artifactId>permission-api</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.milesight.beaveriot</groupId>
            <artifactId>user-api</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.milesight.beaveriot</groupId>
            <artifactId>data-jpa</artifactId>
            <version>${project.version}</version>
        </dependency>
    </dependencies>

</project>
